# ayoru

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: highlevel.md
docs/plans/: 2026-03-11-installer-design.md  2026-03-11-installer-implementation.md  2026-03-11-release-workflow-design.md  2026-03-11-release-workflow-implementation.md  2026-03-11-tui-design.md  2026-03-12-default-tui-command-design.md  2026-03-12-default-tui-command.md  2026-03-12-history-play-vs-open-implementation.md  2026-03-12-installer-fallback-version-plan.md  2026-03-12-main-alpha-release-design.md  2026-03-12-main-alpha-release.md  2026-03-12-modern-tui-redesign-implementation.md  2026-03-12-readme-fast-start-design.md  2026-03-12-readme-fast-start.md  2026-03-12-single-session-playback-implementation.md  2026-03-12-tabbed-library-implementation.md  2026-03-12-tui-only-entrypoint-implementation.md
scripts/: install.sh
src/: app.rs  args.rs  lib.rs  main.rs
src/core/: mod.rs  models.rs  stream_ranker.rs
src/player/: detect.rs  launch.rs
src/provider/: allanime.rs
src/tui/: action.rs  controller.rs  library.rs  mod.rs  runtime.rs  state.rs  storage.rs  ui.rs
tests/: cli_args.rs  install_script.sh  player_detection.rs  provider_allanime.rs  release_workflow.sh  stream_ranker.rs  tui_episode_flow.rs  tui_input.rs  tui_library.rs  tui_playback_flow.rs  tui_render.rs  tui_runtime.rs  tui_search_flow.rs  tui_shell_controller.rs  tui_shell_render.rs  tui_shell_state.rs  tui_state.rs  tui_storage.rs
tests/fixtures/: clock_payload.json  episodes.json  search.json  (+1 more)
