[package]
name = "ayoru"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
which = "8.0"

[dev-dependencies]
tempfile = "3.20"

[lib]
name = "ayoru"
path = "src/lib.rs"
